@@ -1,4 +1,4 @@
-VERSION=1.28
+VERSION=1.30
 PYTHON=python
 
 test:
